# Trader000

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deploy/: deploy.sh
deploy/prometheus/: prometheus.yml
docs/: ARCHITECTURE.md  BACKTESTING.md  DEPLOYMENT.md  QUICKSTART.md
scripts/: apply-additions.sh
src/: __init__.py  main.py
src/ai_layer/: __init__.py  claude_client.py  composite_scorer.py  decision_logger.py  prompts.py  trading_agents.py
src/backtesting/: __init__.py  cli.py  jesse_adapter.py  parity.py  runner.py  walk_forward.py
src/config/: settings.py
src/decision/: __init__.py  engine.py  (+2 more)
svtr-bot/: pyproject.toml  requirements.txt
svtr-bot/src/: main.py
svtr-bot/src/ai_layer/: claude_client.py
svtr-bot/src/config/: __init__.py  settings.py
svtr-bot/src/decision/: position.py
svtr-bot/src/sentiment/: news.py  social.py
svtr-bot/src/signal_engine/: __init__.py  dynamic_tp.py  indicators.py  scoring.py
svtr-bot/src/webhook/: __init__.py  server.py
tests/: conftest.py  run_live_test.py  test_backtest_live_parity.py  test_circuit_breaker.py  test_dashboard_positions.py  test_decision.py  test_e2e_webhook.py  test_jesse_adapter.py  test_multi_symbol_scanner.py  test_phase2_data.py  test_phase3_ai.py  test_portfolio_positions.py  test_send_alert.py  test_signal_engine.py  test_tradingagents.py  test_walk_forward.py
(+32 files in other folders)
